Added basic frontend and swagger routes
